k8s-manifests/test/swisscollections-test-nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swisscollections-test-nginx-deployment
  namespace: memobase
  labels:
    app: swisscollections-test-nginx-app
spec:
  selector:
    matchLabels:
      app: swisscollections-test-nginx-app
  replicas: 1
  template:
    metadata:
      labels:
        app: swisscollections-test-nginx-app
        tier: web
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
