k8s-manifests/test/swisscollections-test-php-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swisscollections-test-front-end-deployment
  namespace: memobase
  labels:
    app: swisscollections-test-app
spec:
  selector:
    matchLabels:
      app: swisscollections-test-app
  replicas: 1
  template:
    metadata:
      labels:
        app: swisscollections-test-app
        tier: web
    spec:
      containers:
        - name: swisscollections-test-container
          image: registry.gitlab.com/swissbib/classic/vufind:swisscollections-SC-59-Kubernetes
          envFrom:
            - configMapRef:
                name: "swisscollections-test-config"
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          imagePullPolicy: Always
