k8s-manifests/test/swisscollections-test-php-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: memobase
  name: swisscollections-test-php-service
  labels:
    app: swisscollections-test-php-app
spec:
  ports:
    - port: 9000
      protocol: TCP
  selector:
    app: swisscollections-test-php-app
    tier: web
  clusterIP: None
