k8s-manifests/test/swisscollections-test-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: memobase
  name: swisscollections-test-service
  labels:
    app: swisscollections-test-app
spec:
  ports:
    - port: 5000
  selector:
    app: swisscollections-test-app
    tier: web
  clusterIP: None
